--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <title>Simple login</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/style.css">
     <script type="javascript" src="/js/jquery.min.js"></script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
    
@@ -15,17 +16,19 @@
                  <table cellpadding="0" cellspacing="0" border="0" class="table table-striped" id="member-list">
                     <thead>
                         <tr>
+                            <th width="20%">id</th>
                             <th width="20%">Username</th>
                             <th width="18%">Email</th>
                             <th width="20%">Password</th>
                             <th width="12%">Operation</th>
                         </tr>
                     </thead>
-                    <tr ng-repeat="user in users">
-                        <td>{{user.name}}</td><td>{{user.email}}</td><td>{{user.pwd}}</td><td><span ng-click="deleteUser(user._id)" class="glyphicon glyphicon-trash"></span></td>
+                    <tr ng-repeat="user in users" ng-class="{highlighted: user._id == idLoggedUser}">
+                        <td>{{user._id}}</td><td>{{user.name}}</td><td>{{user.email}}</td><td>{{user.pwd}}</td><td><span ng-click="deleteUser(user._id)" class="glyphicon glyphicon-trash"></span></td>
                     </tr>
                     <tfoot>
                         <tr>
+                            <th>id</th>
                             <th>Username</th>
                             <th>Email</th>
                             <th>Password</th>
